--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome to Will's Corner</title>
-    <link rel="stylesheet" href="<%= stylesheet_link_tag "master.css" %>">
+    <%= stylesheet_link_tag "master.css" %>
   </head>
   <body>
     <header>
