--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,6 +4,15 @@
 
 <%-# f can be any variable %>
 <%# we also need to initiate the @article %> 
+  <% if @article.errors.any? %>
+  <h2>The following errors prevented the article from getting created</h2>
+<ul>
+  <% @article.errors.full_messages.each do |msg| %>
+  <li><%= msg %></li> 
+  <% end %>
+</ul>
+ <% end %>
+
 <%= form_for @article do|f| %>
 
 <p>
